--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         padding: 0;
 
     }
-    body{
-    }
+
     .centro{
         background: red;
         width: 500px;
@@ -23,6 +22,7 @@
         justify-content: center;
         text-align: center;
         padding-top: 50px;
+        
     }
 
     .botao{
@@ -42,15 +42,19 @@
            <input class="botao" onclick="listar_advogado()" type="button" value="Listar">
 
     </div>
-    <form action="">
-        <input type="text">
+    <div class="formulario">
+        <form action="" >
+        <input type="text" id="name"><br>
+        <input type="text" id="password"><br>
+        <button type="submit">Send</button>
 
-    </form>
+
+        </form>
+    </div>
+
     <br>
     <hr>
-    <ul>
-        <li id="dados"></li>
-    </ul>
+
 
 
 </body>
