--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     
     <div class="centro">
            <input class="botao" onclick="get_jwt()" type="button" value="Token"><br>
-           <!-- <input class="botao" onclick="criar()" type="button" value="Criar"><br> -->
+           <input class="botao" onclick="criar()" type="button" value="Criar"><br>
            <input class="botao" onclick="listar()" type="button" value="Listar"><br>
 
     </div>
